# pytest-mongodb

./: .gitignore  .python-version  .travis.yml  ChangeLog  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: lint-and-test.yml  publish.yml
humongous/: plugin.py
pytest_mongodb/: plugin.py
tests/unit/: test_plugin.py
tests/unit/fixtures/: championships.json  players.yaml  superbowl.yaml
