[metadata]
name = humongous
version = 1.0.0
author = Collins GmbH & Co. KG
author-email = info@project-collins.com
summary = Mongo database mocking with fixtures
description-file = README.rst
home-page = https://stash.collins.kg/projects/CLP/repos/humongous
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Database
    Topic :: Software Development :: Libraries
    Collins :: Collins :: DB Fixtures


[files]
packages = humongous


[entry_points]
pytest11 =
    humongous = humongous.plugin


[wheel]
universal = 1
