[metadata]
name = humongous
version = 1.1.0
author = Collins GmbH & Co. KG
author-email = mdomke@me.com
summary = Mongo database mocking with fixtures
description-file = README.rst
home-page = https://github.com/mdomke/humongous
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Database
    Topic :: Software Development :: Libraries


[files]
packages = humongous


[entry_points]
pytest11 =
    humongous = humongous.plugin


[wheel]
universal = 1
