[metadata]
name = pytest-mongodb
version = 2.1.0
author = Martin Domke
author-email = mail@martindomke.net
summary = pytest plugin for MongoDB fixtures
description-file = README.rst
license = MIT
home-page = https://github.com/mdomke/pytest-mongodb
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Database
    Topic :: Software Development :: Libraries


[files]
packages = pytest_mongodb


[entry_points]
pytest11 =
    pytest-mongodb = pytest_mongodb.plugin


[wheel]
universal = 1
